objects/vtse__Assessment_Rubric_Item__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Assessment_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Criteria</label>
        <referenceTo>vtse__Assessment_Criteria__c</referenceTo>
        <relationshipLabel>Assessment Rubric Items</relationshipLabel>
        <relationshipName>Assessment_Rubric_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Assessment_Rubric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Rubric</label>
        <referenceTo>vtse__Assessment_Rubric__c</referenceTo>
        <relationshipLabel>Assessment Rubric Items</relationshipLabel>
        <relationshipName>Assessment_Rubric_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Rubric Item</label>
    <nameField>
        <displayFormat>ACI-{0}</displayFormat>
        <label>Assessment Rubric Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Rubric Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>